feat: replace native window-manager with cli